fix button color (blue) on ios

--- a/Resources/Private/Scss/_news.scss
+++ b/Resources/Private/Scss/_news.scss
@@ -39,6 +39,7 @@
             border: none;
             background: transparent;
             cursor: pointer;
+            color: var(--lz-font-color);
 
             svg {
                 stroke-width: 1px;
